--- a/src/Cms/CoreBundle/Resources/public/css/node/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/node/read.css
@@ -51,20 +51,16 @@ a {
 #state-container {
     margin-bottom: 20px;
 }
-#category-list li {
-    list-style-type: none;
-    font-size: 15px;
+.checkbox {
+    position: relative;
+    top: 8px;
 }
-#category-list label {
-    font-size: 16px;
-    line-height: 30px;
+#table-category {
+    margin-bottom: 14px;
 }
-#category-list i:hover {
+#table-category i:hover {
     cursor: pointer;
 }
-.category-indented {
-    padding-left: 10px;
-}
-.category-toggle-icon {
-    margin-left: 4px;
+.category-sub {
+    padding-left: 40px;
 }
