updated contentType and node document tests to account for new strtolower and sort function on get and set categories

--- a/src/Cms/CoreBundle/Resources/public/css/node/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/node/read.css
@@ -61,6 +61,9 @@ a {
 #table-category i:hover {
     cursor: pointer;
 }
+#table-category .category-parent-name:hover {
+    cursor: pointer;
+}
 .category-sub {
     padding-left: 40px;
 }
