added dynamic show hide category and json persist

--- a/src/Cms/CoreBundle/Resources/public/css/node/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/node/read.css
@@ -73,6 +73,9 @@ a {
 .category-sub-checkbox {
     padding-left: 30px;
 }
+.category-title {
+    min-width: 180px;
+}
 #add-category-save {
     color: #3498DB;
 }
