added responsive features to node read view

--- a/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/contentType/read.css
@@ -28,9 +28,7 @@ h1 {
     font-size: 15px;
     margin-bottom: 0px;
 }
-#input-state {
-    background-color: #3498DB;
-}
+#input-state {}
 table {
     margin-top: 20px;
 }
