--- a/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
@@ -118,12 +118,16 @@
                     <div class="span12">
                         <textarea name="viewHtml" id="view-html" class="span12" placeholder="Add your content here" required>{% if node is defined %}{{ node.views['html'] | default() }}{% else %}{{ viewHtml|default()}}{% endif %}</textarea>
                     </div>
-                    <a href="#preview" class="preview-node pull-right"><i class="icon-eye-open"></i> Preview</a>
+                    <a href="#preview" class="preview-node hidden-phone pull-right"><i class="icon-eye-open"></i> Preview</a>
+                </div>
+                <div class="row-fluid visible-phone" id='mobile-quick-publish-container'>
+                    <button class="btn btn-info save-node span6 pull-right" {% if node and node.state == 'active' %}disabled{% endif %}><i class="icon-save"></i> Save</button>
+                    <button class="btn btn-inverse publish-node span6 pull-left"><i class="icon-ok-sign"></i> {% if node.state is defined and node.state == 'active' %}Update{% else %}Publish{% endif %}</button>
                 </div>
                 <div class="row-fluid">
                     <div class="span12">
                         <label for="input-description">Description:</label>
-                        <textarea name="description" id="input-description" class="span12" rows="2" placeholder="description"></textarea>
+                        <textarea name="description" id="input-description" class="span12" rows="2" placeholder="description">{{ node.description|default() }}</textarea>
                     </div>
                 </div>
                 <div class="row-fluid">
@@ -139,18 +143,18 @@
             </form>
         </div>
         <div class="span3">
-            <div class="row-fluid">
+            <div class="row-fluid hidden-phone">
                 <div class="span12" id='notice-container'>
                     <div id="innner-notice-container">
                         {% block notices %}{{ parent() }}{% endblock %}
                     </div>
                 </div>
             </div>
-            <div class="row-fluid">
+            <div class="row-fluid" id="row-publish-holder">
                 <div class="span12">
                     <div class="holder" id='publish-holder'>
-                        <h4>Publish</h4>
-                        <div class="row-fluid">
+                        <h4 class="hidden-phone">Publish</h4>
+                        <div class="row-fluid hidden-phone">
                             <div class="span6">
                                 <button class="btn btn-info save-node span12" {% if node and node.state == 'active' %}disabled{% endif %}><i class="icon-save"></i> Save</button>
                             </div>
@@ -163,10 +167,10 @@
                                 <button class="btn span12 preview-node"><i class="icon-eye-open"></i> Preview</button>
                             </div>
                             <div class="span6">
-                                <button class="btn span12" id="state-container-opener"><i class="icon-flag-checkered"></i> Status</button>
+                                <button class="btn span12" id="state-container-opener""><i class="icon-flag-checkered"></i> Status</button>
                             </div>
                         </div>
-                        <div class="row-fluid hide" id='state-container'>
+                        <div class='row-fluid hide' id='state-container'>
                             <div class="span12">
                                 <select name="state" class="select-block span2" id="input-state">
                                     <option value="draft" {% if node and node.state == 'draft' %}selected{% endif %}>Draft</option>
@@ -202,7 +206,7 @@
                         <h4>Categories</h4>
                         <div class="row-fluid">
                             <div class="span12" id='categories-inner-container'>
-                                <table id="table-category">
+                                <table id="table-category" class="table-hover">
                                     {% for category in contentType.categories  %}
                                         {% set HTMLCategoryName = category.parent %}
                                         {% if not category.sub is defined %}
@@ -237,9 +241,6 @@
                             <div class="span9">
                                 <a href="#categories-holder-here" id="add-category-opener"><i class="icon-plus-sign"></i> Add a Category</a>
                             </div>
-                            <div class="span3">
-                                <a href="#save-category-add" class="save-node" id="add-category-save">Save</a>
-                            </div>
                         </div>
                         <div class="row-fluid hide" id='add-category-container'>
                             <div class="span12">
@@ -255,6 +256,9 @@
                                 </form>
                             </div>
                         </div>
+                        <div class="visible-phone">
+                            <button class="btn btn-info save-node" id="add-category-save">Save</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -264,8 +268,11 @@
                         <h4>Tags</h4>
                         <div class="row-fluid">
                             <div class="span12">
-                                <input type="text" class="span11" name='tags' id="tags" value="{{ node.tags|default() }}"/>
+                                <input type="text" class="span11" name='tags' id="tags" value="{{ node.tags('comma')|default() }}"/>
                             </div>
+                        </div>
+                        <div class="visible-phone">
+                            <button class="btn btn-info save-node">Save</button>
                         </div>
                     </div>
                 </div>
@@ -295,7 +302,7 @@
         {{ parent() }}
     {% endblock %}
     <input type="hidden" id="base-url" value="{{ app.request.baseUrl }}"/>
-    <input type="text" id="save-path" value="{{ path('cms_core.node_save') }}" />
+    <input type="hidden" id="save-path" value="{{ path('cms_core.node_save') }}" />
     <input type="hidden" id="delete-path" value="{{ path('cms_core.node_delete') }}"/>
     <input type="hidden" id="read-content-type-path" value="{{ path('cms_core.contentType_read', {'siteId':site.id, 'id':contentType.id}) }}"/>
     <input type="hidden" id="add-category-path" value="{{ path('cms_core.contentType_addCategory') }}"/>
