--- a/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/ContentType/read.html.twig
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div class="span2">
-                    <button class="btn btn-primary btn-block load-data"><i class="icon-filter"></i> Filter</button>
+                    <button class="btn btn-primary btn-block load-data" data-toggle="tooltip" title="yeah dog"><i class="icon-filter"></i> Filter</button>
                 </div>
             </div>
         </div>
