--- a/src/Cms/CoreBundle/Resources/public/css/node/read.css
+++ b/src/Cms/CoreBundle/Resources/public/css/node/read.css
@@ -1,6 +1,9 @@
 input[type="text"], textarea {
     font-size: 18px;
 }
+label {
+    font-size: 18px;
+}
 a {
     font-size: 15px;
     font-weight: bold;
@@ -58,6 +61,9 @@ a {
 #tags-holder h4 {
     margin-bottom: 20px;
 }
+.tag {
+    font-size: 17px;
+}
 #state-container {
     margin-bottom: 20px;
 }
@@ -102,11 +108,7 @@ a {
         margin-bottom: 10px;
     }
 }
-.fields-container {
-    margin-top: 15px;
-}
 .fields-container h4 {
-    font-size: 14px;
     margin-bottom: 3px;
     display: inline-block;
 }
@@ -114,7 +116,7 @@ a {
     border: solid 2px #BDC3C7;
     border-radius: 6px;
     min-height: 67px;
-    padding: 30px;
+    padding: 20px 30px 10px 30px;
     font-size: 20px;
 }
 .field-key-value-pairs-container footer {
@@ -129,4 +131,18 @@ a {
 .field-key {
     position: relative;
     top: 7px;
+}
+#add-field-footer-btn-container .btn {
+    margin-bottom: 10px;
+}
+@media (max-width: 767px) {
+    .remove-field{
+        position: relative;
+        top: -30px;
+        float: right;
+        margin-right: 10px;
+    }
+    .create-field-key {
+        margin-bottom: 20px;
+    }
 }
