added new row of features to primary landing view

--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -103,6 +103,29 @@
                 </div>
             </section>
         </div>
+        <div class="row">
+            <section class="span4">
+                <div class="tile" id="mobile-tile">
+                    <h2>Mobile Ready</h2>
+                    <i class="icon-tablet icon-4x"></i>
+                    <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
+                </div>
+            </section>
+            <section class="span4">
+                <div class="tile" id="multidomain-tile">
+                    <h2>Multi Domain</h2>
+                    <i class="icon-sitemap icon-4x"></i>
+                    <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
+                </div>
+            </section>
+            <section class="span4">
+                <div class="tile" id="easy-to-use-tile">
+                    <h2>Easy to Use</h2>
+                    <i class="icon-thumbs-up icon-4x"></i>
+                    <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
+                </div>
+            </section>
+        </div>
     </div>
 </div>
 <section id="testimonials">
