--- a/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Node/edit.html.twig
@@ -13,6 +13,9 @@
 {% block javascripts %}
     {{ parent() }}
     <script type="text/javascript" src="/dependencies/tinymce/tinymce.min.js"></script>
+    <script type="text/javascript">
+        (function(a){if(window.filepicker){return}var b=a.createElement("script");b.type="text/javascript";b.async=!0;b.src=("https:"===a.location.protocol?"https:":"http:")+"//api.filepicker.io/v1/filepicker.js";var c=a.getElementsByTagName("script")[0];c.parentNode.insertBefore(b,c);var d={};d._queue=[];var e="pick,pickMultiple,pickAndStore,read,write,writeUrl,export,convert,store,storeUrl,remove,stat,setKey,constructWidget,makeDropPane".split(",");var f=function(a,b){return function(){b.push([a,arguments])}};for(var g=0;g<e.length;g++){d[e[g]]=f(e[g],d._queue)}window.filepicker=d})(document);
+    </script>
     {% javascripts
         'flat-ui/js/flatui-radio.js'
         'flat-ui/js/bootstrap-select.js'
@@ -338,7 +341,7 @@
                                 {% if node and node.image %}
                                     <img src="{{ node.image }}" width="200"/>
                                 {% else %}
-                                    <button class="btn btn-info">upload</button>
+                                    <button class="btn btn-info upload-media" data-upload-type='featured-image'>upload</button>
                                 {% endif %}
                             </div>
                         </div>
