--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -93,7 +93,7 @@
             </section>
             <section class="span4">
                 <div class="tile" id="cog-tile">
-                    <h2>New Technology</h2>
+                    <h2><span id="new-tech-affix">New</span> Technology</h2>
                     <i class="icon-cog icon-4x"></i>
                     <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
                 </div>
@@ -133,7 +133,7 @@
 </div>
 <section id="testimonials">
     <div class="container">
-        <div class="row">
+        <div class="row row-title">
             <div class="span12">
                 <h2>Who's Talking About PipeStack?</h2>
             </div>
@@ -222,7 +222,7 @@
 <div id="footer">
     <div class="container">
         <footer class="row">
-            <ul class="span4">
+            <ul>
                 <li><a href="#about">about</a></li>
                 <li><a href="#jobs">jobs</a></li>
                 <li><a href="#contact">contact</a></li>
