responsive fix for 'get enterprise' button text

--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -213,7 +213,7 @@
                 <div class="tile tile-signup">
                     <h3>Enterprise</h3>
                     <p>Swine ball tip corned beef, salami venison chicken bres aola beef pork chop short ribs turkey brisket meat loaf shoulder tongue. Andouille shank turkey shoulder jowla oaf.</p>
-                    <a href="{{ path('cms_core.user_register', {'account_type':'enterprise'}) }}" class="btn btn-xlarge btn-danger">Get Enterprise</a>
+                    <a href="{{ path('cms_core.user_register', {'account_type':'enterprise'}) }}" class="btn btn-xlarge btn-danger"><span class="hidden-tablet">Get </span>Enterprise</a>
                 </div>
             </section>
         </div>
