--- a/src/Cms/CoreBundle/Resources/views/Welcome/signup.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/signup.html.twig
@@ -13,7 +13,7 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <section class="span offset4">
+            <section class="span">
                 <div class="login">
                     <div class="login-form">
                         {% block notices %}
