--- a/src/Cms/CoreBundle/Resources/views/User/register.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/User/register.html.twig
@@ -13,7 +13,7 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <section class="span offset4">
+            <section class="span offset4 primary-section">
                 <div class="login">
                     <div class="login-form">
                         {% for notice in notices  %}
